@@ -1,38 +1,38 @@
 package com.netcracker.service.bulletinboard.impl;
 
-import com.netcracker.dao.managerapi.ManagerAPI;
-import com.netcracker.model.Status;
+import com.netcracker.dao.managerservice.EntityManagerService;
+import com.netcracker.dao.manager.query.QueryDescriptor;
 import com.netcracker.model.advertisement.Advertisement;
 import com.netcracker.model.advertisement.AdvertisementConstant;
 import com.netcracker.model.category.Category;
 import com.netcracker.model.user.Profile;
 import com.netcracker.service.bulletinboard.BulletinBoardService;
+import com.netcracker.service.util.BulletinBoardUtilService;
 import com.netcracker.service.util.PageCounterService;
-import javafx.util.Pair;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import javax.persistence.criteria.CriteriaBuilder;
 import java.math.BigInteger;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 
 @Service
 public class BulletinBoardServiceImpl implements BulletinBoardService {
+    @Autowired
+    EntityManagerService entityManagerService;
+    @Autowired
+    PageCounterService pageCounterService;
+    @Autowired
+    BulletinBoardUtilService bulletinBoardUtilService;
     @Value("${advertisement.list.pageCapasity}")
     String adPageCapacityProp;
     @Value("${advertisement.mylist.pageCapasity}")
     String myAdPageCapacityProp;
 
-    @Autowired
-    ManagerAPI managerAPI;
-    @Autowired
-    PageCounterService pageCounterService;
-
     public int getAllAdPageCount() {
         Integer adPageCapacity = new Integer(adPageCapacityProp);
-        return pageCounterService.getPageCount(adPageCapacity, managerAPI.getAllCount(BigInteger.valueOf(AdvertisementConstant.AD_TYPE)));
+        return pageCounterService.getPageCount(adPageCapacity, entityManagerService.getAllCount(BigInteger.valueOf(AdvertisementConstant.AD_TYPE)));
     }
 
     public int getMyProfileAdPageCount(BigInteger profileId) {
@@ -41,60 +41,131 @@ public class BulletinBoardServiceImpl implements BulletinBoardService {
                 " FROM OBJREFERENCE WHERE ATTRTYPE_ID ="
                 + AdvertisementConstant.AD_AUTHOR +
                 " and REFERENCE = "
-                + profileId +
-                "UNION select REFERENCE as object_id FROM " +
-                "OBJREFERENCE WHERE ATTRTYPE_ID =" +
-                +AdvertisementConstant.AD_AUTHOR +
-                " and OBJECT_ID = " + profileId;
-        return pageCounterService.getPageCount(myAdPageCapacity, managerAPI.getBySqlCount(getAdsQuery));
-
+                + profileId;
+        return pageCounterService.getPageCount(myAdPageCapacity, entityManagerService.getBySqlCount(getAdsQuery));
     }
 
     @Override
-    public List<Advertisement> getProfileAds(boolean isPaging, Pair<Integer, Integer> pagingDesc, Map<String, String> sortingDesc) {
-        BigInteger attrTypeId = BigInteger.valueOf(AdvertisementConstant.AD_TYPE);
-        List<Advertisement> advertisements = managerAPI.getAll(attrTypeId, Advertisement.class, isPaging, pagingDesc, sortingDesc);
+    public int getPageCountTopicSearch(String topic) {
+        Integer adPageCapacity = new Integer(adPageCapacityProp);
+        String getAdsQuery = "SELECT OBJECT_ID as object_id" +
+                " FROM Attributes WHERE ATTRTYPE_ID ="
+                + AdvertisementConstant.AD_TOPIC +
+                " and LOWER(VALUE) LIKE LOWER('%"+topic +"%')";
+        return pageCounterService.getPageCount(adPageCapacity, entityManagerService.getBySqlCount(getAdsQuery));
+    }
+
+    public List<Advertisement> getAllAdAfterCatFilterFromProfile(Integer pageNumber, Integer profileId, Category[] categories){
+        Integer adPageCapacity = new Integer(adPageCapacityProp);
+        String getAdsQuery = "SELECT o1.OBJECT_ID as object_id " +
+                "FROM OBJREFERENCE o1, OBJREFERENCE o2 " +
+                "WHERE o1.ATTRTYPE_ID = " + AdvertisementConstant.AD_AUTHOR +
+                " and o1.REFERENCE = " + profileId +
+                " and o1.object_id = o2.OBJECT_ID"+
+                " and o2.ATTRTYPE_ID ="
+                + AdvertisementConstant.AD_CATEGORY +
+                " and o2.REFERENCE ";
+        getAdsQuery += bulletinBoardUtilService.getFilterCategoryAdditionQuery(categories);
+        QueryDescriptor queryDescriptor = new QueryDescriptor();
+        queryDescriptor.addPagingDescriptor(pageNumber, adPageCapacity);
+        List<Advertisement> advertisements = entityManagerService.getObjectsBySQL(getAdsQuery, Advertisement.class, queryDescriptor);
         for (Advertisement ad : advertisements) {
-            Profile author = ad.getAdAuthor();
             Category category = ad.getAdCategory();
-            if (author != null) {
-                ad.setAdAuthor(managerAPI.getById(author.getObjectId(), Profile.class));
-            }
             if (category != null) {
-                ad.setAdCategory(managerAPI.getById(category.getObjectId(), Category.class));
+                ad.setAdCategory(entityManagerService.getById(category.getObjectId(), Category.class));
             }
         }
         return advertisements;
     }
 
     @Override
-    public List<Advertisement> getMyProfileAds(BigInteger profileId, boolean isPaging, Pair<Integer, Integer> pagingDesc, Map<String, String> sortingDesc) {
+    public List<Advertisement> getAdvertisementListTopicSearch(Integer pageNumber, String topic) {
+        Integer adPageCapacity = new Integer(adPageCapacityProp);
+        String getAdsQuery = "SELECT OBJECT_ID as object_id" +
+                " FROM Attributes WHERE ATTRTYPE_ID ="
+                + AdvertisementConstant.AD_TOPIC +
+                " and LOWER(VALUE) LIKE LOWER('%"+topic +"%')";
+        QueryDescriptor queryDescriptor = new QueryDescriptor();
+        queryDescriptor.addPagingDescriptor(pageNumber, adPageCapacity);
+        List<Advertisement> advertisements = entityManagerService.getObjectsBySQL(getAdsQuery, Advertisement.class, queryDescriptor);
+        return getCategoryAndOwner(advertisements);
+    }
+    private List<Advertisement> getCategoryAndOwner(List<Advertisement> advertisements){
+        for (Advertisement ad : advertisements) {
+            Category category = ad.getAdCategory();
+            if (category != null) {
+                ad.setAdCategory(entityManagerService.getById(category.getObjectId(), Category.class));
+            }
+            Profile author = ad.getAdAuthor();
+            if (author != null) {
+                ad.setAdAuthor(entityManagerService.getById(author.getObjectId(), Profile.class));
+            }
+        }
+        return advertisements;
+    }
+    public List<Advertisement> getAllAdAfterCatFilter(Integer pageNumber, Category[] categories){
+        Integer adPageCapacity = new Integer(adPageCapacityProp);
+        String getAdsQuery = "SELECT OBJECT_ID as object_id" +
+                " FROM OBJREFERENCE WHERE ATTRTYPE_ID ="
+                + AdvertisementConstant.AD_CATEGORY +
+                " and REFERENCE ";
+        getAdsQuery += bulletinBoardUtilService.getFilterCategoryAdditionQuery(categories);
+        QueryDescriptor queryDescriptor = new QueryDescriptor();
+        queryDescriptor.addPagingDescriptor(pageNumber, adPageCapacity);
+        List<Advertisement> advertisements = entityManagerService.getObjectsBySQL(getAdsQuery, Advertisement.class, queryDescriptor);
+        return getCategoryAndOwner(advertisements);
+    }
+
+    @Override
+    public List<Advertisement> getProfileAds(Integer pageNumber) {
+        Integer adPageCapacity = new Integer(adPageCapacityProp);
+        QueryDescriptor queryDescriptor = new QueryDescriptor();
+        queryDescriptor.addPagingDescriptor(pageNumber, adPageCapacity);
+        BigInteger attrTypeId = BigInteger.valueOf(AdvertisementConstant.AD_TYPE);
+        List<Advertisement> advertisements = entityManagerService.getAll(attrTypeId, Advertisement.class, queryDescriptor);
+        return getCategoryAndOwner(advertisements);
+    }
+
+    @Override
+    public List<Advertisement> getMyProfileAds(BigInteger profileId, Integer pageNumber) {
         String getAdsQuery = "SELECT OBJECT_ID as object_id" +
                 " FROM OBJREFERENCE WHERE ATTRTYPE_ID ="
                 + AdvertisementConstant.AD_AUTHOR +
                 " and REFERENCE = "
-                + profileId +
-                "UNION select REFERENCE as object_id FROM " +
-                "OBJREFERENCE WHERE ATTRTYPE_ID =" +
-                +AdvertisementConstant.AD_AUTHOR +
-                " and OBJECT_ID = " + profileId;
-        List<Advertisement> advertisements = managerAPI.getObjectsBySQL(getAdsQuery, Advertisement.class, isPaging, pagingDesc, sortingDesc);
+                + profileId;
+        Integer myAdPageCapacity = new Integer(myAdPageCapacityProp);
+        QueryDescriptor queryDescriptor = new QueryDescriptor();
+        queryDescriptor.addPagingDescriptor(pageNumber, myAdPageCapacity);
+        List<Advertisement> advertisements = entityManagerService.getObjectsBySQL(getAdsQuery, Advertisement.class, queryDescriptor);
         for (Advertisement ad : advertisements) {
             Category category = ad.getAdCategory();
             if (category != null) {
-                ad.setAdCategory(managerAPI.getById(category.getObjectId(), Category.class));
+                ad.setAdCategory(entityManagerService.getById(category.getObjectId(), Category.class));
             }
         }
         return advertisements;
     }
 
     @Override
-    public List<Advertisement> sortAds(List<Advertisement> listAds) {
-        return null;
-    }
-
-    @Override
-    public void newAd(Advertisement ad) {
+    public Advertisement addAd(Advertisement ad) {
+        Profile cutProfile = new Profile();
+        Category cutCategory = new Category();
+        Profile profile = ad.getAdAuthor();
+        Category category = ad.getAdCategory();
+        ad.setAdAuthor(null);
+        ad.setAdCategory(null);
+        Advertisement createdAd = entityManagerService.create(ad);
+        List<Advertisement> newAds = new ArrayList<>(profile.getProfileAdvertisements());
+        List<Advertisement> newAdsInCat = new ArrayList<>(category.getCategoryAds());
+        newAds.add(createdAd);
+        newAdsInCat.add(createdAd);
+        profile.setProfileAdvertisements(newAds);
+        category.setCategoryAds(newAdsInCat);
+        entityManagerService.update(profile);
+        entityManagerService.update(category);
+        createdAd.setAdCategory(cutCategory);
+        createdAd.setAdAuthor(cutProfile);
+        return createdAd;
     }
 
     @Override
@@ -109,16 +180,6 @@ public class BulletinBoardServiceImpl implements BulletinBoardService {
 
     @Override
     public void deleteAd(Advertisement ad) {
-
-    }
-
-    @Override
-    public void chooseCategoryForAd(Advertisement listAds, Category categoryAd) {
-
-    }
-
-    @Override
-    public void filterAdsByCategory(List<Advertisement> listAds, List<Category> categoryAds) {
 
     }
 }
